Stopped daily timetable rooms from overflowing

--- a/site/ts/elements/daily-timetable/period.css
+++ b/site/ts/elements/daily-timetable/period.css
@@ -26,6 +26,10 @@
     font-size: 0.6rem;
 }
 
+.room {
+    overflow-wrap: normal;
+}
+
 .changed {
     color: var(--text2);
 }
